--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li>Basic concept explanations</li>
                     <li>1 Hour for Homework assistance</li>
                 </ul>
-                <button>Subscribe</button>
+                <button><a href="https://wa.me/message/3Y2V2BDXMUTSO1">Subscribe</a></button>
             </div>
 
             <!-- Plan 2 -->
@@ -65,7 +65,7 @@
                     <li>Practice exercises</li>
                     
                 </ul>
-                <button>Subscribe</button>
+               <button><a href="https://wa.me/message/3Y2V2BDXMUTSO1">Subscribe</a></button>
             </div>
 
             <!-- Plan 3 -->
@@ -79,7 +79,7 @@
                     <li>Progress tracking</li>
                     <li>Extra practice material</li>
                 </ul>
-                <button>Subscribe</button>
+                <button><a href="https://wa.me/message/3Y2V2BDXMUTSO1">Subscribe</a></button>
             </div>
 
 
